Fix entity